fix(storybook): global style bleeding into components for tr

--- a/.storybook/styles.scss
+++ b/.storybook/styles.scss
@@ -57,7 +57,7 @@
       @apply bg-background text-body;
     }
 
-    &.sbdocs-wrapper > *:not(.sb-anchor) tr:nth-of-type(2n) {
+    &.sbdocs-wrapper > .sbdocs-content tr:nth-of-type(2n):not(.sb-anchor tr) {
       @apply bg-background-100;
     }
   }
